--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node .",
+    "wiki-art": "node wiki-art.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
